--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -8,11 +8,36 @@
 body {
   width: 100%;
   height: 100%;
+  background-color: #454545;
+}
+
+@media (max-width: 1000px) {
+  body {
+    background-color: #000;
+  }
 }
 
 canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: block;
   margin: 0;
   padding: 0;
-  width: 100%;
+  width: 390px;
+  height: 844px;
+  border-radius: 40px;
+  box-shadow: 0 2px 30px -10px;
 }
 
+@media (max-width: 1000px) {
+  canvas {
+    top: auto;
+    left: auto;
+    transform: none;
+    width: 100%;
+    height: 100%;
+    box-shadow: none;
+  }
+}
